--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,8 +15,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ForgotPasswordActivity">
+        </activity>
         <activity android:name=".RegisterActivity">
-
         </activity>
         <activity android:name=".HomepageActivity">
 
