--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CAMERA" />
+    <uses-feature android:name="android.hardware.camera"/>
+    <uses-feature android:name="android.hardware.camera.autofocus"/>
 
     <application
         android:allowBackup="true"
@@ -24,7 +26,6 @@
         </activity>
         <activity android:name=".ForgotPasswordActivity"></activity>
         <activity android:name=".RegisterActivity"></activity>
-        <activity android:name=".QRScanActivity"></activity>
         <activity android:name=".MenuActivity"></activity>
     </application>
 
