--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,23 +15,20 @@
         android:roundIcon="@drawable/food"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity
-            android:name=".MenuActivity"
-            android:label="@string/title_activity_menu"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
-        <activity
-            android:name=".HomepageActivity"
-            android:label="@string/title_activity_homepage" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".HomepageActivity"
+            android:label="@string/title_activity_homepage" />
+        <activity android:name=".MainActivity"/>
         <activity android:name=".LoginActivity"></activity>
         <activity android:name=".ForgotPasswordActivity" />
         <activity android:name=".RegisterActivity" />
+        <activity android:name=".FoodmenuActivity"/>
     </application>
 
 </manifest>
